fix unreadable form input field filename in chrome
--HG--
branch : moe
extra : convert_revision : svn%3A2d28d66d-8d94-df11-8c86-00306ef368cb/trunk/moe%40912

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -203,6 +203,11 @@ input {
   padding: 0 0.3em;
 }
 
+input[type=file] {
+  /* Chrome puts the filename next to the input element in the text color. */
+  color: white;
+}
+
 input[type=password]:focus {
   background: #FFC;
 	color: #000;
